[package]
name = "graph-node-reader"
version = "0.16.1"
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "serde_json", "numeric", "r2d2"] }
# We use diesel-dynamic-schema straight from git as the project has not
# made a release as a crate yet
diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev="a8ec4fb1" }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
graph = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.16.1" }
graph-graphql = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.16.1" }
Inflector = "0.11.3"
lru_time_cache = "0.9"
